SERVER-19713 $maxDistance should not be able to take a BSONObj