src/mongo/db/matcher/expression_parser_geo_test.cpp
@@ -76,4 +76,116 @@ TEST(MatchExpressionParserGeoNear, ParseNearExtraField) {
     StatusWithMatchExpression result = MatchExpressionParser::parse(query);
     ASSERT_FALSE(result.isOK());
 }
+
+// For $near, $nearSphere, and $geoNear syntax of:
+// {
+//   $near/$nearSphere/$geoNear: [ <x>, <y> ],
+//   $minDistance: <distance in radians>,
+//   $maxDistance: <distance in radians>
+// }
+TEST(MatchExpressionParserGeoNear, ParseValidNear) {
+    BSONObj query = fromjson("{loc: {$near: [0,0], $maxDistance: 100, $minDistance: 50}}");
+
+    StatusWithMatchExpression result = MatchExpressionParser::parse(query);
+    ASSERT_TRUE(result.isOK());
+
+    MatchExpression* exp = result.getValue().get();
+    ASSERT_EQ(MatchExpression::GEO_NEAR, exp->matchType());
+
+    GeoNearMatchExpression* gnexp = static_cast<GeoNearMatchExpression*>(exp);
+    ASSERT_EQ(gnexp->getData().maxDistance, 100);
+    ASSERT_EQ(gnexp->getData().minDistance, 50);
 }
+
+TEST(MatchExpressionParserGeoNear, ParseInvalidNear) {
+    {
+        BSONObj query = fromjson("{loc: {$maxDistance: 100, $near: [0,0]}}");
+        StatusWithMatchExpression result = MatchExpressionParser::parse(query);
+        ASSERT_FALSE(result.isOK());
+    }
+    {
+        BSONObj query = fromjson("{loc: {$minDistance: 100, $near: [0,0]}}");
+        StatusWithMatchExpression result = MatchExpressionParser::parse(query);
+        ASSERT_FALSE(result.isOK());
+    }
+    {
+        BSONObj query = fromjson("{loc: {$near: [0,0], $maxDistance: {}}}");
+        ASSERT_THROWS(MatchExpressionParser::parse(query), UserException);
+    }
+    {
+        BSONObj query = fromjson("{loc: {$near: [0,0], $minDistance: {}}}");
+        ASSERT_THROWS(MatchExpressionParser::parse(query), UserException);
+    }
+}
+
+TEST(MatchExpressionParserGeoNear, ParseValidGeoNear) {
+    BSONObj query = fromjson("{loc: {$geoNear: [0,0], $maxDistance: 100, $minDistance: 50}}");
+
+    StatusWithMatchExpression result = MatchExpressionParser::parse(query);
+    ASSERT_TRUE(result.isOK());
+
+    MatchExpression* exp = result.getValue().get();
+    ASSERT_EQ(MatchExpression::GEO_NEAR, exp->matchType());
+
+    GeoNearMatchExpression* gnexp = static_cast<GeoNearMatchExpression*>(exp);
+    ASSERT_EQ(gnexp->getData().maxDistance, 100);
+    ASSERT_EQ(gnexp->getData().minDistance, 50);
+}
+
+TEST(MatchExpressionParserGeoNear, ParseInvalidGeoNear) {
+    {
+        BSONObj query = fromjson("{loc: {$maxDistance: 100, $geoNear: [0,0]}}");
+        StatusWithMatchExpression result = MatchExpressionParser::parse(query);
+        ASSERT_FALSE(result.isOK());
+    }
+    {
+        BSONObj query = fromjson("{loc: {$minDistance: 100, $geoNear: [0,0]}}");
+        StatusWithMatchExpression result = MatchExpressionParser::parse(query);
+        ASSERT_FALSE(result.isOK());
+    }
+    {
+        BSONObj query = fromjson("{loc: {$geoNear: [0,0], $maxDistance: {}}}");
+        ASSERT_THROWS(MatchExpressionParser::parse(query), UserException);
+    }
+    {
+        BSONObj query = fromjson("{loc: {$geoNear: [0,0], $minDistance: {}}}");
+        ASSERT_THROWS(MatchExpressionParser::parse(query), UserException);
+    }
+}
+
+TEST(MatchExpressionParserGeoNear, ParseValidNearSphere) {
+    BSONObj query = fromjson("{loc: {$nearSphere: [0,0], $maxDistance: 100, $minDistance: 50}}");
+
+    StatusWithMatchExpression result = MatchExpressionParser::parse(query);
+    ASSERT_TRUE(result.isOK());
+
+    MatchExpression* exp = result.getValue().get();
+    ASSERT_EQ(MatchExpression::GEO_NEAR, exp->matchType());
+
+    GeoNearMatchExpression* gnexp = static_cast<GeoNearMatchExpression*>(exp);
+    ASSERT_EQ(gnexp->getData().maxDistance, 100);
+    ASSERT_EQ(gnexp->getData().minDistance, 50);
+}
+
+TEST(MatchExpressionParserGeoNear, ParseInvalidNearSphere) {
+    {
+        BSONObj query = fromjson("{loc: {$maxDistance: 100, $nearSphere: [0,0]}}");
+        StatusWithMatchExpression result = MatchExpressionParser::parse(query);
+        ASSERT_FALSE(result.isOK());
+    }
+    {
+        BSONObj query = fromjson("{loc: {$minDistance: 100, $nearSphere: [0,0]}}");
+        StatusWithMatchExpression result = MatchExpressionParser::parse(query);
+        ASSERT_FALSE(result.isOK());
+    }
+    {
+        BSONObj query = fromjson("{loc: {$nearSphere: [0,0], $maxDistance: {}}}");
+        ASSERT_THROWS(MatchExpressionParser::parse(query), UserException);
+    }
+    {
+        BSONObj query = fromjson("{loc: {$nearSphere: [0,0], $minDistance: {}}}");
+        ASSERT_THROWS(MatchExpressionParser::parse(query), UserException);
+    }
+}
+
+}  // namespace mongo
